--- a/packages/client/scss/vars.scss
+++ b/packages/client/scss/vars.scss
@@ -11,7 +11,7 @@ body {
     image-rendering: pixelated;
     background:
         linear-gradient(to bottom, rgb(0 0 0 / 0%), rgb(0 0 0 / 0%), rgb(0 0 0 / 60%)),
-        url('/img/tile.png') center center;
+        url('/img/tile.gif') center center;
     background-size: auto;
 }
 
